@@ -46,6 +46,11 @@ Inline `code fragments` with single ticks.
 int main() { return 0; }
 ```
 .Ed
+.It lists
+Lists of items starting with either
+.Sq +
+or
+.Sq - .
 .It images
 Inline images with img tags.
 .Bd -literal
