@@ -2,6 +2,8 @@ changelog
 
 -- next
 
++ Lists supported in markdown.
+
 + Rewrite admin console to avoid large dependencies.
 
 + "Bug" fixes.
